fix title spacing

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -20,13 +20,16 @@
     margin-right: 70px;
 }
 
+.title-spacing {
+    padding-top: 50px;
+}
+
 .title-name {
     font-weight: 600;
     font-size: 65px;
 }
 
 .title-text {
-    padding-top: 50px;
     font-size: 65px;
 }
 
